# dmlc-core

./: .gitignore  CMakeLists.txt
cmake/: Config.cmake.in
example/: CMakelists.txt
include/dmlc/: base.h  omp.h
src/: config.cc
test/: CMakeLists.txt
test/unittest/: CMakeLists.txt  unittest_parser.cc
